# hexdbc

./: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt  start.py
src/hexdbc/: __init__.py  __main__.py
src/hexdbc/core/: __init__.py  dbc_cache.py  dbc_relations.py  hexdbc_format.py  parser.py  schema.py
src/hexdbc/resources/: __init__.py
src/hexdbc/ui/: __init__.py  dialogs.py  editor.py  main_window.py  reference_tooltip.py  theme.py
tools/: generate_schemas.py
tools/resources/: WotLK 3.3.5 (12340).xml  dbc_definitions.xml
