[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexdbc"
version = "0.8.0"
description = "A modern code-based DBC editor for WoW 3.3.5a modding"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hex + Contributers"}
]
keywords = ["wow", "dbc", "editor", "modding", "wotlk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "PySide6>=6.0.0",
    "QScintilla>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.scripts]
hexdbc = "hexdbc:main"

[project.gui-scripts]
hexdbc-gui = "hexdbc:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hexdbc.resources.schemas" = ["*.xml"]
